# display_gfx

./: .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: host_test.yml
examples/basic_usage/: CMakeLists.txt  sdkconfig.defaults
examples/basic_usage/main/: CMakeLists.txt  main.cpp
host_test/: CMakeLists.txt  coverage_common.cmake  extra_dirs_common.cmake
host_test/common/: mock_graphics_context.hpp  mock_hal_display.hpp
host_test/test_display_gfx/: CMakeLists.txt
host_test/test_display_gfx/.cache/clangd/index/: main.cpp.9098C667DB175D2C.idx  test_interfaces.cpp.6A84DF73C1613F83.idx
host_test/test_display_gfx/main/: CMakeLists.txt  test_framebuffer_graphics_context.cpp  test_hal_display_ssd1306.cpp  test_interfaces.cpp
include/: framebuffer_graphics_context.hpp  hal_display_ssd1306.hpp
include/fonts/: font5x7.hpp
include/interfaces/: i_graphics_context.hpp  i_hal_display.hpp
src/: framebuffer_graphics_context.cpp  hal_display_ssd1306.cpp
test_apps/test_build/: CMakeLists.txt  sdkconfig.defaults
test_apps/test_build/main/: CMakeLists.txt  main.cpp
